# QtCreator

YiXin/: YiXin.pro
YiXin/App/: App.pri  main.cpp  myclass.cpp  myclass.h  yixin.cpp  yixin.h
YiXin/Dev/: Dev.pri  agl_dev.cpp  agl_dev.h  libcharset.so.1.0.0  libiconv.so.2.5.0  qzxing.h  uUsbCamera.cpp  uUsbCamera.h
YiXin/Pro/: Agl100.pro
YiXin/Sql/: Sql.pri  sql.cpp  sql.h
YiXin_test/YiXin_test/: YiXin_test.pro
YiXin_test/build-YiXin_test-Desktop_Qt_5_11_2_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp
build-YiXin-Desktop_Qt_5_11_2_clang_64bit-Debug/: Makefile
build-helloword-Desktop_Qt_5_11_2_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
clion/test/: CMakeLists.txt
helloword/: helloword.pro  main.cpp  main.cpp.autosave  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui
learn/CommodityWidget/: CommodityWidget.pro  commodity.cpp  commoditytest.cpp  commoditytest.h  commoditywidget.cpp  commoditywidget.h  commoditywidget.ui  main.cpp
learn/SignalsAndSlotsWidget/: SignalsAndSlotsWidget.pro  signalsandslotswidget.cpp  signalsandslotswidget.h  signalsandslotswidget.ui
learn/SimpleTest/: SimpleTest.pro  commodity.h  commoditytest.cpp  commoditytest.h  main.cpp  simpletest.cpp  simpletest.h  simpletest.ui
learn/StdLayoutWidget/: StdLayoutWidget.pro  stdlayoutwidget.cpp  stdlayoutwidget.h  stdlayoutwidget.ui
learn/demo_2018_12_03/: demo_2018_12_03.pro  inputwidget.cpp  inputwidget.h  inputwidget.ui  weekspinbox.cpp  weekspinbox.h
learn/demo_2018_12_04/: demo_2018_12_04.pro  (+3 more)
test/: main.cpp  test.pro
(+12 files in other folders)
